--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -26,10 +26,10 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  NROL39
 
 # Build settings
-theme: minima
+theme: pages-themes/hacker@v0.2.0
 plugins:
   - jekyll-feed
-
+  - jekyll-remote-theme
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
