--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -27,7 +27,7 @@ twitter_username: jekyllrb
 github_username:  NROL39
 
 # Build settings
-theme: pages-themes/hacker@v0.2.0
+remote_theme: pages-themes/hacker@v0.2.0
 plugins:
   - jekyll-feed
   - jekyll-remote-theme
